dodanie metody get do training